--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 
 
 							<div class="plus_item"><!-- single counter item -->
-								<span class="num" num="1">00</span><span>,2</span>
+								<span class="num" num="1">00</span><span>,2</span><span>kW</span>
 								<h4 class="plus_title">na każdy kg tworzywa</h4>
 							</div>
 
